--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 build/*
 .env
-ice-cream-dataops/config.test.yaml
-ice-cream-dataops/config.prod.yaml
+#ice-cream-dataops/config.test.yaml
+#ice-cream-dataops/config.prod.yaml
 .venv
